# D2xDL-Week8

./: .gitignore  README.md  app.py  ml_project_example_image_classification.ipynb  ml_project_example_regression.ipynb  pyproject.toml  requirements.txt
