[project]
name = "code-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "jupyterlab-rise>=0.43.1",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pynrrd>=1.1.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]
