[project]
name = "code-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "notebook<7",
    "numpy==1.26.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pynrrd>=1.1.3",
    "rise>=5.7.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "tensorflow-macos>=2.16.2",
    "tensorflow-metal>=1.2.0",
]
